[project]
name = ""
version = ""
description = ""
authors = [
    {name = "fatelei", email = "fatelei@gmail.com"},
]
dependencies = [
    "pyppeteer>=1.0.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
